--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
@@ -1,11 +1,23 @@
+# {{ if and (ne .Values.image.domainPath "") (not (hasKey .Values.image "noStripPath")) }}
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: "{{ include ".helm.fullname" . }}-strip"
+#   namespace: {{ .Values.namespace }}
+# spec:
+#   stripPrefix:
+#     prefixes:
+#       - "/{{ .Values.image.domainPath }}"
+# {{ end }}
+
 {{ if and (ne .Values.image.domainPath "") (not (hasKey .Values.image "noStripPath")) }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: "{{ include ".helm.fullname" . }}-strip"
+  name: "{{ include ".helm.fullname" . }}-auth"
   namespace: {{ .Values.namespace }}
 spec:
-  stripPrefix:
-    prefixes:
-      - "/{{ .Values.image.domainPath }}"
+  forwardAuth:
+    address: {{ .Values.middleWare.forwardAuthaddress }}
+    authResponseHeadersRegex: {{ .Values.middleware.authResponseHeadersRegex }}
 {{ end }}
