--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -3,9 +3,13 @@ image:
   repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
   pullPolicy: Always
   containerPort: 3001
-  tag: "latest"
+  tag: "0.0.290-0"
   hostname: anaheim-training-portlet
   domainPath: "training"
+  forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+  trustForwardHeader: true
+  authResponseHeadersRegex: ^X-
+
   envFrom:
     secretRefs:
       - hasura-secret
