DEVO-1309,DEVO-1338,DEVO-1339,DEVO-1340,DEVO-1341,DEVO-1342,DEVO-1344: Forward-AUTH

--- a/charts/anaheim-annotator-service/values.yaml
+++ b/charts/anaheim-annotator-service/values.yaml
@@ -1,6 +1,8 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-annotator-service
-
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+trustForwardHeader: true
+authResponseHeadersRegex: ^X-
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-annotator-service
@@ -21,7 +23,6 @@ image:
       value: "http://anaheim-project-service:3014"
     - name: SERVICE_ENV
       value: "non-local"
-
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
