--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -1,7 +1,7 @@
 fullnameOverride: "anaheim-portal"
 anaheim-container:
   image:
-    replicaCount: 1
+    replicaCount: 3
     repository: ghcr.io/htaic/anaheim-portal/anaheim-container
     pullPolicy: Always
     containerPort: 3000
@@ -39,11 +39,11 @@ anaheim-container:
     targetCPUUtilizationPercentage: 80
 anaheim-training-portlet:
   image:
-    replicaCount: 1
+    replicaCount: 3
     repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
     pullPolicy: Always
     containerPort: 3001
-    tag: 0.0.290-0
+    tag: lastest
     hostname: anaheim-training-portlet
     domainPath: "training"
     envFrom:
@@ -57,11 +57,6 @@ anaheim-training-portlet:
 
   imagePullSecrets:
     - name: dockerconfigjson-github-com
-
-  middleWare:
-    forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
-    trustForwardHeader: true
-    authResponseHeadersRegex: ^X-
 
   service:
     type: ClusterIP
@@ -78,12 +73,12 @@ anaheim-training-portlet:
 
   autoscaling:
     enabled: false
-    minReplicas: 1
+    minReplicas: 3
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
 anaheim-verification-portlet:
   image:
-    replicaCount: 1
+    replicaCount: 3
     repository: ghcr.io/htaic/anaheim-portal/anaheim-verification-portlet
     pullPolicy: Always
     containerPort: 3002
@@ -117,6 +112,6 @@ anaheim-verification-portlet:
 
   autoscaling:
     enabled: false
-    minReplicas: 1
+    minReplicas: 3
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
