--- a/charts/anaheim-feature-flags-service/templates/ingressroute.yaml
+++ b/charts/anaheim-feature-flags-service/templates/ingressroute.yaml
@@ -1,4 +1,3 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -8,14 +7,14 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: (PathPrefix("/{{ .Values.domainPath }}"))
+    - match: (PathPrefix("/{{ .Values.image.domainPath }}"))
       kind: Rule
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
           port: {{ .Values.image.containerPort }}
-      {{ if (not (hasKey .Values "noStripPath")) }}
       middlewares:
+      - name: "{{ include ".helm.fullname" . }}-auth"
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
-{{ end }}
