--- a/charts/hasura/templates/ingressroute.yaml
+++ b/charts/hasura/templates/ingressroute.yaml
@@ -1,4 +1,3 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -17,5 +16,6 @@ spec:
       {{ if (not (hasKey .Values "noStripPath")) }}
       middlewares:
       - name: "{{ include ".helm.fullname" . }}-strip"
+      {{ if (not (hasKey .Values "noStripPath")) }}
+      - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
-{{ end }}
