--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -1,7 +1,9 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-training-assets-service
 domainPath: "training-assets"
-
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+trustForwardHeader: true
+authResponseHeadersRegex: ^X-
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-training-assets-service
@@ -9,7 +11,7 @@ image:
   containerPort: 3010
   tag: "latest"
   hostname: anaheim-training-assets-service
-  
+
   env:
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
@@ -17,7 +19,8 @@ image:
       value: "/assets"
     - name: FF_SHARE_ACROSS_VERSION
       value: "false"
-
+    - name: FEATURE_FLAGS_API_URL
+      value: "https://pvt-k8s-hv-wdev-wddl-uw2-1.wdev.hticdev.net/feature-flags-service"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
@@ -47,7 +50,7 @@ storage:
   capacity: 100Gi
   volumeMode: Filesystem
   csi:
-    volumeHandle: YOUR_FILESYSTEM_ID
+    volumeHandle: fs-0ba685ad88487dfee
     volumeAttributes:
       encryptInTransit: "true"
   volumeMountPath: /assets
