--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -1,3 +1,6 @@
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+trustForwardHeader: true
+authResponseHeadersRegex: ^X-
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
