added VITE_AUTH_API env variable

--- a/charts/anaheim-portal/templates/portal-params.yaml
+++ b/charts/anaheim-portal/templates/portal-params.yaml
@@ -10,3 +10,4 @@ data:
   VITE_ANNOTATOR_API: "/annotations"
   VITE_FEATURE_FLAGS_API: "/feature-flags-service"
   VITE_WAVESYNC_API: "/wavesync-adapter"
+  VITE_AUTH_API: "/auth"
