--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -21,6 +21,8 @@ image:
       value: "/assets"
     - name: FF_SHARE_ACROSS_VERSION
       value: "false"
+    - name: FEATURE_FLAGS_API_URL
+      value: "http://anaheim-feature-flags-service:3020"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
