--- a/charts/anaheim-training-assets-service/templates/deployment.yaml
+++ b/charts/anaheim-training-assets-service/templates/deployment.yaml
@@ -43,11 +43,11 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom: 
             - secretRef:
+                name: "aws-sqs-secret"
+            - secretRef:
                 name: "aws-eventbridge-secret"
             - configMapRef: 
                 name: "aws-account-configmap"
-
-                
           env: 
             - name: GRAPHQLSERVERTOKEN
               valueFrom:
