--- a/charts/anaheim-training-assets-service/templates/ingressroute.yaml
+++ b/charts/anaheim-training-assets-service/templates/ingressroute.yaml
@@ -1,3 +1,4 @@
+{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -13,9 +14,8 @@ spec:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
           port: {{ .Values.image.containerPort }}
-      middlewares:
-      - name: "{{ include ".helm.fullname" . }}-auth"
       {{ if (not (hasKey .Values "noStripPath")) }}
+      middlewares:
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
-
+{{ end }}
