chore: AN-978 enable readiness and liveness for portal-container
chore: AN-979 remove readiness, liveness from portal

chore: AN-979 remove readiness, liveness from portlets

--- a/charts/anaheim-portal/charts/anaheim-container/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/values.yaml
@@ -4,6 +4,8 @@ image:
   pullPolicy: Always
   containerPort: 3000
   tag: "latest"
+  livenessProbe: livez
+  readinessProbe: readyz
   hostname: anaheim-container
   envFrom:
     secretRefs:
