chore: AN-963 enable readiness and liveness for portlets

--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
@@ -4,6 +4,8 @@ image:
   pullPolicy: Always
   containerPort: 3002
   tag: "latest"
+  livenessProbe: livez
+  readinessProbe: readyz
   hostname: anaheim-verification-portlet
   domainPath: "verify"
   envFrom:
