--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -4,6 +4,8 @@ image:
   pullPolicy: Always
   containerPort: 3001
   tag: "latest"
+  livenessProbe: livez
+  readinessProbe: readyz
   hostname: anaheim-training-portlet
   domainPath: "training"
   envFrom:
