--- a/charts/anaheim-annotator-service/values.yaml
+++ b/charts/anaheim-annotator-service/values.yaml
@@ -1,6 +1,8 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-annotator-service
-
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+Auth Response Headers Regex: ^X-
+Trust Forward Header: true
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-annotator-service
