--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -2,8 +2,8 @@ namespace: "hanwha"
 fullnameOverride: anaheim-project-service
 domainPath: "projects"
 forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
-Auth Response Headers Regex: ^X-
-Trust Forward Header: true
+authResponseHeadersRegex Regex: ^X-
+trustForwardHeader: true
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-project-service
