--- a/charts/anaheim-feature-flags-service/templates/ingressroute.yaml
+++ b/charts/anaheim-feature-flags-service/templates/ingressroute.yaml
@@ -14,7 +14,9 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
       - name: "{{ include ".helm.fullname" . }}-auth"
-      {{ if (not (hasKey .Values "noStripPath")) }}
+      {{- end }}
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
