--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
@@ -14,7 +14,9 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
       - name: "{{ include ".helm.fullname" . }}-auth"
+      {{- end }}
       {{ if (not (hasKey .Values.image "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
