--- a/charts/anaheim-training-assets-service/templates/auth-middleware.yaml
+++ b/charts/anaheim-training-assets-service/templates/auth-middleware.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.trustForwardHeader true }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
@@ -8,3 +9,4 @@ spec:
     address: {{ .Values.forwardAuthaddress }}
     authResponseHeadersRegex: {{ .Values.authResponseHeadersRegex }}
     trustForwardHeader: {{ .Values.trustForwardHeader }}
+{{ end }}
