Implement auth service for annotator,feature-flags,training-portlet,p… (#259)
* Implement auth service for annotator,feature-flags,training-portlet,project,training-assets

* Implement auth service for annotator,feature-flags,training-portlet,project,training-assets

* Implement auth service for annotator,feature-flags,training-portlet,project,training-assets

* Implement auth service for annotator,feature-flags,training-portlet,project,training-assets

* values changed

* chore: AN-978 enable readiness and liveness for portal-container

chore: AN-979 remove readiness, liveness from portal

chore: AN-979 remove readiness, liveness from portlets

* chore: AN-979 add probes to training portlet deployment template

* chore: AN-979 add probes to verification portlet deployment template

* Update values.yaml

* Update deployment.yaml

* Update values.yaml

* Create aws-sqs-secret.yaml

* bump baseline

* changed helm version

* remove unused variable

* changed helm version

* changed helm version

* changed helm version

* changed git ignore

* chore: fix toggle for auth

---------

Co-authored-by: Eric Peterson <e.peterson@hanwha.com>
Co-authored-by: HanwhaAutomation <109167922+HanwhaAutomation@users.noreply.github.com>
Co-authored-by: HanwhaAutomation <htic.admin@hanwha-wisenet.com>

--- a/charts/anaheim-annotator-service/values.yaml
+++ b/charts/anaheim-annotator-service/values.yaml
@@ -1,6 +1,8 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-annotator-service
-
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+authResponseHeadersRegex Regex: ^X-
+trustForwardHeader: true
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-annotator-service
