--- a/charts/anaheim-feature-flags-service/values.yaml
+++ b/charts/anaheim-feature-flags-service/values.yaml
@@ -1,7 +1,9 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-feature-flags-service
 domainPath: "feature-flags-service"
-
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+authResponseHeadersRegex Regex: ^X-
+trustForwardHeader: true
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-feature-flags-service
