chore: disable live/readiness for portal

--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -8,7 +8,9 @@ image:
   containerPort: 3001
   tag: "latest"
   livenessProbe: livez
+  livenessProbePeriodSeconds: 240
   readinessProbe: readyz
+  readinessProbePeriodSeconds: 240
   hostname: anaheim-training-portlet
   domainPath: "training"
   envFrom:
