--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
@@ -5,7 +5,9 @@ image:
   containerPort: 3002
   tag: "latest"
   livenessProbe: livez
+  livenessProbePeriodSeconds: 240
   readinessProbe: readyz
+  readinessProbePeriodSeconds: 240
   hostname: anaheim-verification-portlet
   domainPath: "verify"
   envFrom:
