DEVO-1386 : corrected configurations

--- a/charts/hasura/charts/anaheim-authentication-service/templates/deployment.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/templates/deployment.yaml
@@ -39,6 +39,10 @@ spec:
           envFrom:
             - secretRef:
                 name: "hasura-secret"
+            - configMapRef:
+                name: "baseline-configmap"
+            - configMapRef:
+                name: "duclo-configmap"
           env: 
             - name: POSTGRESURI
               valueFrom:
