--- a/charts/anaheim-baseline/templates/duclo-configmap.yaml
+++ b/charts/anaheim-baseline/templates/duclo-configmap.yaml
@@ -4,3 +4,4 @@ metadata:
   name: "duclo-configmap"
 data:
   DUCLO_DOMAIN: {{ .Values.AWS.duclo_domain }}
+  DUCLO_AUTH_CERTS_URL: {{ .Values.AWS.duclo_auth_certs_url }}
