--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -22,6 +22,8 @@ image:
       value: "production"
     - name: TRAINING_ASSETS_SERVICE_URL
       value: "http://anaheim-training-assets-service:3010"
+    - name: TOKEN_SECRET_KEY
+      value: "xj6R2EgpS43K++fVPFfq1g+U+pgpMQzLOxn0rky9SiARNoxudStwhujil639BQIn"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
