add fix wavesync

--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -14,6 +14,9 @@ AWS:
   sqs_url: YOUR_SQS_URL
   duclo_domain: YOUR_DUCLO_DOMAIN
   duclo_auth_certs_url: YOUR_DUCLO_AUTH_CERTS_URL
+  
+wavesync:
+  token: YOUR_WAVESYNC_TOKEN
 
 dockerCredentials:
   username: YOUR_GITHUB_USER
