--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -14,6 +14,9 @@ AWS:
   sqs_url: YOUR_SQS_URL
   duclo_domain: YOUR_DUCLO_DOMAIN
   duclo_auth_certs_url: YOUR_DUCLO_AUTH_CERTS_URL
+  aws_project_sqs_name: YOUR_AWS_PROJECT_SQS_NAME
+  aws_project_sqs_url: YOUR_AWS_PROJECT_SQS_URL
+
   
 dockerCredentials:
   username: YOUR_GITHUB_USER
