--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -21,7 +21,7 @@ image:
     - name: TRAINING_ASSETS_SERVICE_URL
       value: "http://anaheim-training-assets-service:3010"
     - name: AWS_PROJECT_SQS_URL
-      value: "https://sqs.${deploy_region}.amazonaws.com/${account_id}/pvt-sqs-wddl-${var.default_tags.Environment}-project-service-uw2-q"
+      value: "https://sqs.${var.deploy_region}.amazonaws.com/${var.account_id}/pvt-sqs-wddl-${var.default_tags.Environment}-project-service-uw2-q"
     - name: AWS_PROJECT_SQS_NAME
       value: pvt-sqs-wddl-${var.default_tags.Environment}-project-service-uw2-q
 
