--- a/charts/anaheim-baseline/templates/aws-sqs-secret.yaml
+++ b/charts/anaheim-baseline/templates/aws-sqs-secret.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   AWS_SQS_NAME: {{ .Values.AWS.sqs_name | b64enc }}
   AWS_SQS_URL: {{ .Values.AWS.sqs_url | b64enc }}
-  AWS_PROJECT_SQS_URL: {{ .Values.AWS.PROJECT_SQS_URL | b64enc }}
-  AWS_PROJECT_SQS_NAME: {{ .Values.AWS.PROJECT_SQS_NAME | b64enc }}
+  AWS_PROJECT_SQS_URL: {{ .Values.AWS.aws_project_sqs_url | b64enc }}
+  AWS_PROJECT_SQS_NAME: {{ .Values.AWS.aws_project_sqs_name | b64enc }}
