corrected chart name

--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -8,8 +8,8 @@ image:
   pullPolicy: Always
   containerPort: 3022
   tag: "latest"
-  livenessProbe: /livez
-  readinessProbe: /readyz
+  # livenessProbe: /livez
+  # readinessProbe: /readyz
   hostname: anaheim-ai-boxify-service
   envFrom:
     configMapRefs:
