--- a/charts/anaheim-baseline/Chart.yaml
+++ b/charts/anaheim-baseline/Chart.yaml
@@ -40,6 +40,6 @@ dependencies:
   - name: postgresql
     version: "^0.1.9"
     repository: "https://htaic.github.io/helm-charts"
-  # - name: redis
-  #   version: "^0.0.5"
-  #   repository: "https://htaic.github.io/helm-charts"
+  # - name: aws-mountpoint-s3-csi-driver
+  #   version: "^1.3.1"
+  #   repository: "https://github.com/awslabs/mountpoint-s3-csi-driver"
