--- a/charts/anaheim-ai-boxify-service/templates/ingressroute.yaml
+++ b/charts/anaheim-ai-boxify-service/templates/ingressroute.yaml
@@ -1,4 +1,3 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -14,8 +13,10 @@ spec:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
           port: {{ .Values.image.containerPort }}
-      {{ if (not (hasKey .Values "noStripPath")) }}
       middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
+      - name: "{{ include ".helm.fullname" . }}-auth"
+      {{- end }}
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
-{{ end }}
