--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -1,5 +1,8 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-ai-boxify-service
+forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
+authResponseHeadersRegex Regex: ^X-
+trustForwardHeader: true
 domainPath: "ai-boxify"
 
 image:
