devo-1447: commit changes

--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -8,4 +8,6 @@ spec:
   stripPrefix:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
+      # - "/help"
+      # - "/project/:id"
 {{ end }}
