--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
@@ -8,4 +8,7 @@ spec:
   stripPrefix:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
+      # - "/training-assets"
+      # - "/help"
+      # - "/project/:id"
 {{ end }}
