--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -15,14 +15,14 @@ image:
   hostname: anaheim-training-assets-service
 
   env:
+    - name: PROJECTS_API_URL
+      value: "http://anaheim-project-service:3014"
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: STORAGE_BASE_PATH
       value: "/assets"
     - name: FEATURE_FLAGS_API_URL
       value: "http://anaheim-feature-flags-service:3020"
-    - name: PROJECTS_API_URL
-      value: "http://anaheim-project-service:3014"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
@@ -52,7 +52,7 @@ storage:
   capacity: 100Gi
   volumeMode: Filesystem
   csi:
-    volumeHandle: YOUR_FILESYSTEM_ID
+    volumeHandle: fs-0ba685ad88487dfee
     volumeAttributes:
       encryptInTransit: "true"
   volumeMountPath: /assets
